@@ -45,6 +45,7 @@ pyqtgraph-0.9.9  [unreleased]
         - Multiprocess debugging colors messages by process
         - Stdout filter that colors text by thread
         - PeriodicTrace used to report deadlocks
+    - Added AxisItem.setStyle()
 
   Bugfixes:
     - PlotCurveItem now has correct clicking behavior--clicks within a few px
